--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <div class="hero-cta">
             <a id="hero-btn-1" class="btn" href="#"></a>
             <a id="hero-btn-2" class="btn ghost" href="#"></a>
+            <a id="hero-btn-3" class="btn ghost"></a>
+            <a id="hero-btn-4" class="btn ghost"></a>
+            <a id="hero-btn-5" class="btn ghost"></a>
           </div>
         </div>
         <div class="hero-img">
