--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="hero-img">
-          <img id="hero-img" alt="Imagen portada">
+          <img id="hero-img" alt="Imagen portadaa">
         </div>
       </div>
     </section>
